<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.Carpool">

    <LinearLayout
        android:id="@+id/nav_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carpool"
            android:textSize="30dp"
            android:textColor="@color/black2"
            android:fontFamily="@font/comfortaa_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carpooling_caption"
            android:textColor="@color/black2"
            android:fontFamily="@font/comfortaa_light"
            android:layout_marginTop="10dp"/>



    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewTripBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/nav_upper"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewTripLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/yourtrip_title" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewTripLbl"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/apple"
                android:textSize="12sp"
                android:text="@string/yourtrip_caption" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/family_car" />



        </RelativeLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/createTripBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/viewTripBtn"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createTripLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/createtrip_title" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/createTripLbl"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/apple"
                android:text="@string/createtrip_caption"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/route" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_below="@id/createTripBtn"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/black2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/apple"
        android:text="@string/instruction"/>

</LinearLayout>