<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/appleGray"
    tools:context=".ui.Profile">

<!--    profile pic-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="3dp"
        android:background="@drawable/shape_avatar_border_grey"/>

<!--    username-->
    <TextView
        android:id="@+id/profileNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="CHOO JUN SHENG"
        android:textColor="@color/appleBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/apple"
        android:layout_marginTop="5dp"/>

<!--    student id-->
    <TextView
        android:id="@+id/studentIdTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="2012034"
        android:textColor="@color/appleBlack"
        android:fontFamily="@font/comfortaa_light"
        android:layout_marginTop="5dp"/>

<!--    student email-->
    <TextView
        android:id="@+id/emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/appleBlack"
        android:text="choojs-wp19@student.tarc.edu.my"
        android:fontFamily="@font/comfortaa_light"
        android:layout_marginTop="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/round_back_purple10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="15dp">

                <!--acc info-->
                <RelativeLayout
                    android:id="@+id/walletRL"
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/walletIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/wallet"/>

                    <TextView
                        android:id="@+id/walletTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="RM1236.45"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/walletIcon"/>

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/appleGray" />

                <!--acc info-->
                <RelativeLayout
                    android:id="@+id/ratingRL"
                    android:layout_weight="1.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ratingIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/star"/>

                    <TextView
                        android:id="@+id/ratingTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="4.9/5.0"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/ratingIcon"/>

                </RelativeLayout>




            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_purple10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!--acc info-->
                <RelativeLayout
                    android:id="@+id/edtProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/accInfoIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/users"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/acc_info"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/accInfoIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--verify-->
                <RelativeLayout
                    android:id="@+id/verifyMyKad"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/verifyDocumentIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/verify_black_2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/verify_document"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/verifyDocumentIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--car info-->
                <RelativeLayout
                    android:id="@+id/carInfo"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/carInfoIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/car_black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/car_info"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/carInfoIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_purple10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!--activity-->
                <RelativeLayout
                    android:id="@+id/fragmentActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activityIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/activity_black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/activity"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/activityIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--Report-->
                <RelativeLayout
                    android:id="@+id/reportBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/reportIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/chart_black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="Report"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/reportIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--Report-->
                <RelativeLayout
                    android:id="@+id/testMapBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/mapIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/map_marker"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="Map"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/mapIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--FAQ-->
                <RelativeLayout
                    android:id="@+id/faqBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/faqIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/faq"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="FAQs"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/faqIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <!--setting-->
                <RelativeLayout
                    android:id="@+id/setting"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/settingIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/settings_black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/setting"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/settingIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_purple10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!--logout-->
                <RelativeLayout
                    android:id="@+id/logoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/power_red"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/logout"
                        android:textColor="@color/appleBlack"
                        android:layout_toEndOf="@id/logoutIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_navigate_next_24"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>







</LinearLayout>